--- a/src/main/resources/org/example/se302_examscheduler/MainView.fxml
+++ b/src/main/resources/org/example/se302_examscheduler/MainView.fxml
@@ -7,7 +7,7 @@
 
 <BorderPane xmlns="http://javafx.com/javafx/17"
             xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="org.example.se302_examscheduler.MainController."
+            fx:controller="org.example.se302_examscheduler.MainController"
             styleClass="app-root">
 
     <!-- TOP: minimal menu bar -->
