fixing errors on fxml

--- a/src/main/resources/org/example/se302_examscheduler/ExportScheduleDialog.fxml
+++ b/src/main/resources/org/example/se302_examscheduler/ExportScheduleDialog.fxml
@@ -5,8 +5,9 @@
 
 <VBox xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="ExportScheduleDialog"
-            spacing="10" padding="10">
+      fx:controller="org.example.se302_examscheduler.ExportScheduleController"
+
+      spacing="10" padding="10">
     <children>
         <Label text="Export Exam Schedule"/>
 
