--- a/src/main/resources/org/example/se302_examscheduler/GenerateScheduleDialog.fxml
+++ b/src/main/resources/org/example/se302_examscheduler/GenerateScheduleDialog.fxml
@@ -5,7 +5,8 @@
 
 <VBox xmlns="http://javafx.com/javafx/17"
       xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="org.example.SE302_ExamScheduler.GenerateScheduleController"
+      fx:controller="org.example.se302_examscheduler.GenerateScheduleController"
+
       spacing="10" padding="10">
 
     <children>
